fix: disable flex and enable overflow-y: scroll on .FlywheelSitesList

--- a/src/styles/containers/Flywheel.scss
+++ b/src/styles/containers/Flywheel.scss
@@ -16,7 +16,7 @@
 
 	.FlywheelSitesList {
 		padding: 30px;
-		display: flex;
+		overflow-y: auto;
 		flex-direction: column;
 		flex: 1;
 
